# slick

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
slick/: guify.py
tests/: test_guify.py  test_slick.py
