[tool.poetry]
name = "slick"
version = "0.1.0"
description = ""
authors = ["Philipp Hack <philipp.hack@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
PySimpleGUI = "^4.56.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
isort = {extras = ["pyproject"], version = "^5.10.1"}
pyproject-flake8 = "^0.0.1-alpha.2"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"
bump2version = "^1.0.1"
pytest-mock = "^3.7.0"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = 'black'
src_paths = ["hcp3cli", "tests"]
line_length = 88
include_trailing_comma = true
balanced_wrapping = true
force_single_line = false
multi_line_output = 3
lines_between_types = 1

[tool.flake8]
count = "false"
extend-exclude = 'docs'
extend-ignore = "E203,S101,SIM106"
max-line-length = 88
show-source = "false"
statistics = "false"
inline-quotes = '"'
accept-encodings = 'utf-8'

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]
addopts = "-rfEX -p pytester --strict-markers --maxfail=2 --cov --pdb"
python_files = ["test_*.py"]
xfail_strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
